--- a/src/components/ui/IngredientsPage/IngredientsSection/IngredientList/IngredientList.module.scss
+++ b/src/components/ui/IngredientsPage/IngredientsSection/IngredientList/IngredientList.module.scss
@@ -1,17 +1,11 @@
 .IngredientList {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    
     ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
         list-style-type: none;
         gap: 20px;
         width: 100%;
+        height: 100%;
     }
 }
